--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -1,9 +1,9 @@
 ---
-title：All Test
-description:这是在Next中写作的所有可能用到的功能测试
-categories：
+title: All Test
+description: 这是在Next中写作的所有可能用到的功能测试
+categories:
  - test
-tags:测试
+tags: 测试
 ---
 
 ## 首先是标题头
@@ -14,7 +14,7 @@ categories:
 tags:
 ```
 分别代表着：标题、描述、分类和标签，其中分类要使用
-、
+```
 categories:
  - X
-、
+```
