--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -6,7 +6,7 @@ categories:
 tags: 测试
 ---
 
-## 首先是标题头
+## 标题头
 ```
 title:
 description:
@@ -17,4 +17,46 @@ tags:
 ```
 categories:
  - X
+```
+注意写作过程中使用英文的“:”号，并且保证“:”后空一格填写信息
+
+## 高亮测试
+在写作中插入某些代码时可以使得代码高亮，例如：
+```
+	```C++
+	#include <iostream>
+
+	using namespace std;
+
+	void foo(int arg1, int arg2)
+	{
+
+	}
+
+	int main()
+	{
+  	string str;
+  	foo(1, 2);
+  	cout << "Hello World" << endl;
+  	return 0;
+	}
+	```
+```	
+```C++
+	#include <iostream>
+
+	using namespace std;
+
+	void foo(int arg1, int arg2)
+	{
+
+	}
+
+	int main()
+	{
+  	string str;
+  	foo(1, 2);
+  	cout << "Hello World" << endl;
+  	return 0;
+	}
 ```
