--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -2,7 +2,7 @@
 title: All Test
 description: 这是在Next中写作的所有可能用到的功能测试
 categories:
- - test
+ - Test
 tags: 测试
 ---
 
@@ -60,3 +60,12 @@ int main()
   return 0;
 }
 ```
+## emoji测试
+这里是emoji的测试。:smile: 哈哈
+
+全部的emoji表情详见:wink: :<https://www.webpagefx.com/tools/emoji-cheat-sheet/>
+
+只要使用`:simle:`就会出现emoji表情
+
+:bowtie::smile::laughing::blush::smiley::relaxed::smirk:
+:heart_eyes::kissing_heart::kissing_closed_eyes::flushed::relieved::satisfied::grin:
