--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -11,9 +11,11 @@ tags: 测试
 title:
 description:
 categories:
+photos:
+date:
 tags:
 ```
-分别代表着：标题、描述、分类和标签，其中分类要使用
+分别代表着：标题、描述、分类、图片、时间和标签，其中分类要使用
 ```
 categories:
  - X
@@ -60,6 +62,7 @@ int main()
   return 0;
 }
 ```
+
 ## emoji测试
 这里是emoji的测试。:smile: 哈哈
 
@@ -69,3 +72,14 @@ int main()
 
 :bowtie::smile::laughing::blush::smiley::relaxed::smirk:
 :heart_eyes::kissing_heart::kissing_closed_eyes::flushed::relieved::satisfied::grin:
+
+## 图片测试
+### 标题图片
+这里指会出现在首页的以缩略图形式存在的图片,一行最多出现三张图，大小自动适应（应该）
+```
+photos:
+- http://ww2.sinaimg.cn/mw690/81b78497jw1emfgwil5xkj21hc0u0tpm.jpg
+- http://ww3.sinaimg.cn/mw690/81b78497jw1emfgvcdn25j21hc0u0qpa.jpg
+```
+markdown语法图片同样适用，大小也是自适应的吧T-T，具体写在MD语法测试中
+![Wallbase - dgnfly (wallbase.cc/wallpaper/1384450)](http://ww1.sinaimg.cn/large/81b78497jw1emfgts2pt4j21hc0u0k1c.jpg)
