--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -6,7 +6,7 @@ categories:
 tags: 测试
 ---
 
-## 标题头
+# 标题头
 ```
 ---
 title:
@@ -24,7 +24,7 @@ categories:
 ```
 注意写作过程中使用英文的“:”号，并且保证“:”后空一格填写信息
 
-## 高亮测试
+# 高亮测试
 在写作中插入某些代码时可以使得代码高亮，例如：
 ```
 	```C++
@@ -66,7 +66,7 @@ int main()
 }
 ```
 
-## emoji测试
+# emoji测试
 这里是emoji的测试。:smile: 哈哈
 
 全部的emoji表情详见:wink: :<https://www.webpagefx.com/tools/emoji-cheat-sheet/>
@@ -76,8 +76,8 @@ int main()
 :bowtie::smile::laughing::blush::smiley::relaxed::smirk:
 :heart_eyes::kissing_heart::kissing_closed_eyes::flushed::relieved::satisfied::grin:
 
-## 图片测试
-### 标题图片
+# 图片测试
+## 标题图片
 这里指会出现在首页的以缩略图形式存在的图片,一行最多出现三张图，大小自动适应（应该）
 ```
 photos:
@@ -85,18 +85,33 @@ photos:
 - http://ww3.sinaimg.cn/mw690/81b78497jw1emfgvcdn25j21hc0u0qpa.jpg
 ```
 
-###文本图片
+##文本图片
 markdown语法同样适用，大小也是自适应的吧T-T，具体写在MD语法测试中
 ![Wallbase - dgnfly (wallbase.cc/wallpaper/1384450)](http://ww1.sinaimg.cn/large/81b78497jw1emfgts2pt4j21hc0u0k1c.jpg)
 
-## markdown语法测试
+# markdown语法测试
 
-###标题
+##标题
 
 # `#`这是一级标题
 ## `##`这是二级标题
 ### `###`这是三级标题
 #### `####`这是四级标题
 ##### `#####`这是五级标题
+###### `######`这是六级标题
 
-###加粗
+##段落
+
+使用空一段来创建段落
+
+使用两个以上的空格  
+来换行
+
+## 加粗
+使用`**加粗**`或者`__加粗__`来对文字进行**加粗**
+
+## 斜体
+使用`*斜体*`或者`_斜体_`来对文字进行*斜体*
+
+##加粗&斜体
+使用`***加粗&斜体***`、`___加粗&斜体___`、`**_加粗&斜体_**`、`__*加粗&斜体*__`来对文字进行***加粗&斜体***
