--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -300,7 +300,7 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 
 如果需要渲染出``我可以在其中`使用`单上划线``的效果使用标记（\`\`）
 
-要创建代码块的话，将代码缩进4格便可
+要创建代码块的话，将代码缩进4格便可，注意代码上下要留空换行
 ```
 
     <html>
@@ -315,4 +315,11 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
         <title>代码块要空八格或者两个制表符</title>
       </head>
 
-要创建没有缩进的代码块的话，使用（\`\`\`）进行标记
+要创建没有缩进的隔离代码块的话，使用（\`\`\`）进行标记
+
+## (七) 分割线
+要创建水平线，请在线上使用三个或更多星号（``***``），短划线（``---``）或下划线（``___``）。
+
+***
+
+## (八) 链接
