--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -323,3 +323,8 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 ***
 
 ## (八) 链接
+在中括号中填写链接文本例如``[baidu]``，然后紧接小括号中填写链接URL``(https://www.baidu.com)``
+```
+我常常访问[百度](https://www.baidu.com)来解决问题
+```
+我常常访问[百度](https://www.baidu.com)来解决问题
