--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -162,7 +162,6 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 >   - 无序列表缩进
 > + 无序列表
 ```
-
 > #### 首先看看标题
 >
 > 然后看看**加粗**和*斜体*
@@ -328,3 +327,22 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 我常常访问[百度](https://www.baidu.com)来解决问题
 ```
 我常常访问[百度](https://www.baidu.com)来解决问题
+
+### 添加链接标题
+当鼠标悬停在链接上出现的文字，在输入URL的小括号中，紧跟着链接，加一个空格，使用``" "``来进行标记
+```
+我常常访问[百度](https://www.baidu.com "只能略信")来解决问题
+```
+我常常访问[百度](https://www.baidu.com "只能略信")来解决问题
+
+### 显示网址和电子邮件地址
+如果只想显示网址或者电子邮件地址的话，将其填入尖括号``< >``中
+```
+<https://www.baidu.com>
+<fake@example.com>
+```
+<https://www.baidu.com>
+<fake@example.com>
+
+### 链接的加粗与斜体
+要强调链接，在括号前后加星号
