--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -341,8 +341,14 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 <https://www.baidu.com>
 <fake@example.com>
 ```
-<https://www.baidu.com>
+<https://www.baidu.com>  
 <fake@example.com>
 
 ### 链接的加粗与斜体
 要强调链接，在括号前后加星号
+```
+我常常访问**[百度](https://www.baidu.com)**来解决问题
+```
+我常常访问**[百度](https://www.baidu.com)**来解决问题
+
+### 参考风格模式的链接
