--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -350,5 +350,30 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 我常常访问**[百度](https://www.baidu.com)**来解决问题
 ```
 我常常访问**[百度](https://www.baidu.com)**来解决问题
-
 ### 参考风格模式的链接
+用参考风格的链接可以使得文章更清晰，更容易读取。
+#### 格式化链接的第一部分
+第一部分由两个中括号组成``[google][1]``
+前一个中括号中内容为显示在文章中的内容，后面的中括号中的内容为标签，两个中括号中可以包含空格，标签可以是数字和字母，不区分大小写。  
+以下这此种写法都可以：
+* ``[google][1]``
+* ``[google] [1]``
+* ``[google][a]``
+* ``[google][A]``  
+
+#### 格式化链接的第二部分
+第二部分需要：
+1. 第一部分的标签中括号加上一个冒号和一个空格（例如``[1]: ``）
+2. 链接中的URL可以写在尖括号中。
+3. 链接的可选标题，可以用双引号、单引号或者括号括起来。
+
+这此种写法都可以：
+* [1]: https://www.google.com
+* [1]: https://www.google.com "google"
+* [1]: https://www.google.com 'google'
+* [1]: https://www.google.com (google)
+* [1]: <https://www.google.com> "google"
+* [1]: <https://www.google.com> 'google'
+* [1]: <https://www.google.com> (google)
+
+可以将第二部分放在markdown的任意位置。
