--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -377,3 +377,21 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 * [1]: <https://www.google.com> (google)
 
 可以将第二部分放在markdown的任意位置。
+### 讲链接放在文章中
+#### 标准的URL链接
+一般将超链接嵌入文本会使用标准的URL链接，如下：
+``
+在地上的一个洞里住着一个霍比特人。不是一个令人讨厌，肮脏，潮湿的洞，充满了蠕虫的末端和一种臭味，还没有一个干燥，光秃秃的沙质洞，里面没有任何东西可以坐下或吃东西：它是一个[霍比特洞](https://en.wikipedia.org/wiki/Hobbit#Lifestyle "Hobbit lifestyles")，那个意味着舒适。``
+这样会使得文章不那么容易阅读，至少源代码检查起来有可能会有点头疼。那么就用参考链接模式
+```
+在地上的一个洞里住着一个霍比特人。不是一个令人讨厌，肮脏，潮湿的洞，充满了蠕虫的末端和一种臭味，还没有一个干燥，光秃秃的沙质洞，里面没有任何东西可以坐下或吃东西：它是一个[霍比特洞][1]，那个意味着舒适。
+
+[1]: https://en.wikipedia.org/wiki/Hobbit#Lifestyle "Hobbit lifestyles"
+```
+
+渲染出的内容是一样的：  
+在地上的一个洞里住着一个霍比特人。不是一个令人讨厌，肮脏，潮湿的洞，充满了蠕虫的末端和一种臭味，还没有一个干燥，光秃秃的沙质洞，里面没有任何东西可以坐下或吃东西：它是一个[霍比特洞][1]，那个意味着舒适。
+
+[1]: https://en.wikipedia.org/wiki/Hobbit#Lifestyle "Hobbit lifestyles"
+
+## 图片
