--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -395,3 +395,29 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 [1]: https://en.wikipedia.org/wiki/Hobbit#Lifestyle "Hobbit lifestyles"
 
 ## 图片
+图片上面测试过，markdown的语法就是  ``![图片alt文本](图片路径或者URL"图片标题")``
+
+如果要添加图片链接  ``[![图片alt文本](图片路径或者URL"图片标题")](URL)``
+
+##逃脱符号含义
+要信使原本用于格式化markdown的文字字符，可以用`\`来表示，在字符前添加反斜杠  
+``\* 如果没有反斜杠，这将是无序列表中的子弹。``  
+渲染输出如下：  
+\* 如果没有反斜杠，这将是无序列表中的子弹。  
+### 可以逃脱的符号：
+| 字符 | 名称 |
+| --- | --- |
+| \\ | 反斜线 |
+| \` | 刻度线 |
+| \* | 星号 |
+| \_ | 下划线 |
+| \{\} | 大括号 |
+| \[\] | 中括号 |
+| \(\) | 小括号 |
+| \# | 井号 |
+| \+ | 加号 |
+| \- | 减号 |
+| \. | 点 |
+| \! | 感叹号 |
+
+
