--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -421,4 +421,35 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 | \. | 点 |
 | \! | 感叹号 |
 
+# mackdown扩展语法
+## 表格
+使用三个或更多连字符(\-\-\-)来创建每列的标题，并使用(\|)符号来分隔每个列，可以添加任意行和列  
+使用这种方式写表格非常麻烦，可以考虑使用[Markdown Tables Generator](http://www.tablesgenerator.com/markdown_tables)
+```
+| Syntax      | Description |
+| ----------- | ----------- |
+| Header      | Title       |
+| Paragraph   | Text        |
+```
+渲染后如下：
 
+| Syntax      | Description |
+| ----------- | ----------- |
+| Header      | Title       |
+| Paragraph   | Text        |
+
+单元格宽度可以变化，如下所示：
+```
+| Syntax | Description |
+| --- | ----------- |
+| Header | Title |
+| Paragraph | Text |
+```
+渲染后：
+
+| Syntax | Description |
+| --- | ----------- |
+| Header | Title |
+| Paragraph | Text |
+
+### 对齐
