--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -438,7 +438,7 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 | Header      | Title       |
 | Paragraph   | Text        |
 
-单元格宽度可以变化，如下所示：
+连字符长度可以变化，但是没什么用，如下所示：
 ```
 | Syntax | Description |
 | --- | ----------- |
@@ -453,3 +453,59 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 | Paragraph | Text |
 
 ### 对齐
+可以使用:号来量化表格的对齐方式。
+```
+| Syntax      | Description | Test Text     |
+| :---        |    :----:   |          ---: |
+| Header      | Title       | Here's this   |
+| Paragraph   | Text        | And more      |
+```
+渲染如下：
+
+| Syntax      | Description | Test Text     |
+| :---        |    :----:   |          ---: |
+| Header      | Title       | Here's this   |
+| Paragraph   | Text        | And more      |
+
+### 格式化表格中的文本
+#### 可以使用的格式化
+* 链接
+* 代码（仅\`XXX\`中标记的短语，而不是代码块）
+* 加粗&斜体
+
+#### 不能使用的格式化
+
+* 标题
+* 块引用
+* 列表
+* 分割线
+* 图像
+* HTML标记
+
+## 脚注
+脚注可以避免文档正文混乱，使用``[^1]``来标记脚注  
+使用``[^1]: My footnote``来写脚注的内容
+
+```
+这是一个简单的脚注，[^1]这是一个较长的脚注。[^bignote]
+
+[^1]: 这是第一个脚注。
+[^bignote]: 这是一个有多个段落和代码的脚注。
+
+    缩进段落以将其包含在脚注中。
+
+    `{ my code }`
+
+    添加任意数量的段落。 
+```
+
+这是一个简单的脚注，[^1]这是一个较长的脚注。[^bignote]
+
+[^1]: 这是第一个脚注。
+[^bignote]: 这是一个有多个段落和代码的脚注。
+
+  缩进段落以将其包含在脚注中。
+
+   `{ my code }`
+
+  添加任意数量的段落。 
