--- a/_posts/2018-10-30-all-test.md
+++ b/_posts/2018-10-30-all-test.md
@@ -492,7 +492,7 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 [^1]: 这是第一个脚注。
 [^bignote]: 这是一个有多个段落和代码的脚注。
 
-    缩进段落以将其包含在脚注中。
+    缩进4格段落以将其包含在脚注中。
 
     `{ my code }`
 
@@ -504,10 +504,48 @@ markdown语法参见<https://www.markdownguide.org/basic-syntax/#images>
 [^1]: 这是第一个脚注。
 [^bignote]: 这是一个有多个段落和代码的脚注。
 
-    缩进段落以将其包含在脚注中。
+    缩进4格段落以将其包含在脚注中。
 
      `{ my code }`
 
     添加任意数量的段落。 
 
 ## 定义
+要创建术语或者定义的时候，使用下一行，然后键入冒号，空格后跟上定义
+
+```
+First Term
+: This is the definition of the first term.
+
+Second Term
+: This is one definition of the second term.
+: This is another definition of the second term.
+```
+
+First Term
+: This is the definition of the first term.
+
+Second Term
+: This is one definition of the second term.
+: This is another definition of the second term.
+
+## 删除线
+使用两个波浪线``~~``来表示删除
+```
+~~The world is flat.~~ We now know that the world is round.
+```
+
+~~The world is flat.~~ We now know that the world is round.
+
+## 任务列表
+使用连字线\-和中括号\[\]来组成任务列表
+
+```
+- [x] Write the press release
+- [ ] Update the website
+- [ ] Contact the media
+```
+
+- [x] Write the press release
+- [ ] Update the website
+- [ ] Contact the media
