--- a/_posts/2018-11-08-Mutl.md
+++ b/_posts/2018-11-08-Mutl.md
@@ -1,14 +1,13 @@
 ---
 title: 浅谈多声道音响的摆位
 description: 转载自： 中国音响网
-categories: 
+categories:
  - 转载
  - 音响知识
 tags:
  - 多声道
  - 摆位
-photos：
- - http://ww1.sinaimg.cn/mv690/bc9cb96aly1fx0wc4xodnj20ei0b8jsc.jpg
+photos: http://ww1.sinaimg.cn/mv690/bc9cb96aly1fx0wc4xodnj20ei0b8jsc.jpg
  
 ---
 
